@@ -1,9 +1,20 @@
+Wed Dec 24 22:04:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * utils/BMW/website/App_Code/unittest.asmx.cs:
+        
+          . Added username/password authentication to the webservice, which
+            is sent as part of the SOAP header.
+            
+        * utils/BMW/website/App_Code/Service.asmx.cs:
+
+          Removed this file.
+
 Wed Dec 24 21:43:38 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * utils/BMW/website/login.aspx.cs:
 
           Removed unused namespace imports.
-          
+
 Wed Dec 24 21:40:28 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs:
